Prevent line break inside p (bad pracice?)

--- a/style.css
+++ b/style.css
@@ -127,6 +127,7 @@ input[type="search"] {
 #account-name {
     color: black;
     font-size: 30px;
+    white-space: nowrap;
 }
 
 .header-icons {
